# style_transfer

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
models/: README.md  content_style_weights.txt
style_transfer/: README.md  __init__.py  cli.py  gui.py
style_transfer/gui_components/: __init__.py  adain_options_widget.py  johnson_advanced_options_widget.py  johnson_model_selection_widget.py  style_transfer_thread.py
style_transfer/models/: __init__.py  adain.py  johnson_transformer.py
style_transfer/utils/: __init__.py  device_utils.py  image_processing.py  model_utils.py  video_utils.py
tests/: README.md  conftest.py  test_adain.py  test_cli.py  test_device_utils.py  test_image_processing.py
